service/tests/models/products/snapshots/product_options/can_create_product_option_without_display_order@product_options.snap
---
source: tests/models/products/product_options.rs
expression: result
---
Ok(
    ProductOption {
        id: ID,
        pid: PID,
        product_id: ID,
        attribute_id: ID,
        display_order: None,
        created_at: DATE,
    },
)
