service/tests/models/products/snapshots/product_options/can_find_all_product_options@product_options.snap
---
source: tests/models/products/product_options.rs
expression: result
---
Ok(
    [
        ProductOption {
            id: ID,
            pid: PID,
            product_id: ID,
            attribute_id: ID,
            display_order: Some(
                1,
            ),
            created_at: DATE,
        },
        ProductOption {
            id: ID,
            pid: PID,
            product_id: ID,
            attribute_id: ID,
            display_order: Some(
                2,
            ),
            created_at: DATE,
        },
        ProductOption {
            id: ID,
            pid: PID,
            product_id: ID,
            attribute_id: ID,
            display_order: Some(
                1,
            ),
            created_at: DATE,
        },
        ProductOption {
            id: ID,
            pid: PID,
            product_id: ID,
            attribute_id: ID,
            display_order: Some(
                2,
            ),
            created_at: DATE,
        },
        ProductOption {
            id: ID,
            pid: PID,
            product_id: ID,
            attribute_id: ID,
            display_order: Some(
                1,
            ),
            created_at: DATE,
        },
        ProductOption {
            id: ID,
            pid: PID,
            product_id: ID,
            attribute_id: ID,
            display_order: Some(
                2,
            ),
            created_at: DATE,
        },
    ],
)
