service/tests/models/products/snapshots/product_options/cannot_create_product_option_when_product_does_not_exist@product_options.snap
---
source: tests/models/products/product_options.rs
expression: result
---
Err(
    InvalidReference(
        "Product does not exist.",
    ),
)
