service/tests/models/products/snapshots/product_options/cannot_create_product_option_when_relation_exists@product_options.snap
---
source: tests/models/products/product_options.rs
expression: result
---
Err(
    EntityAlreadyExists(
        "Product already has this option attribute.",
    ),
)
