service/tests/models/products/snapshots/product_options/cannot_find_product_option_when_pid_does_not_exist@product_options.snap
---
source: tests/models/products/product_options.rs
expression: result
---
Err(
    EntityNotFound,
)
